k8s/apps/default/sonarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: sonarr
      priorityClassName: cluster-p1
      volumes:
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - name: cache
          persistentVolumeClaim:
            claimName: sonarr-cache
        - name: scripts
          configMap:
            name: sonarr-scripts
            defaultMode: 0755
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        supplementalGroups: [3005]
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.19.3011@sha256:47d56de90c81eb2a8f0d36771328a95e7299609579b88db82b1473c314f26a47
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: 1280Mi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 8989
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
            - name: cache
              mountPath: /config/MediaCover
            - name: scripts
              mountPath: /scripts
              readOnly: true
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: web
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe: *probe
