k8s/apps/default/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  ports:
    - name: web
      targetPort: web
      port: 8989
