k8s/apps/default/sonarr/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  hostnames:
    - sonarr.cbannister.xyz
  parentRefs:
    - name: internal-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
